manifests/gitea.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: git
  annotations:
    cert-manager.io/cluster-issuer: "mkcert-issuer"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - gitea.127-0-0-1.sslip.io
    secretName: gitea-tls
  rules:
  - host: gitea.127-0-0-1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
